manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latency-service
  labels:
    app.kubernetes.io/name: latency-service
    app.kubernetes.io/part-of: codsec-assignment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: latency-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: latency-service
        app.kubernetes.io/part-of: codsec-assignment
    spec:
      automountServiceAccountToken: false
      containers:
        - name: latency-service
          image: docker.io/eladpress/codsec-assignment:main-8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
