manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: latency-service
  labels:
    app.kubernetes.io/name: latency-service
    app.kubernetes.io/part-of: codsec-assignment
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: latency-service
  ports:
    - name: http
      port: 80
      targetPort: http
